# python-project-50

./: .coverage  Makefile  README.md  cli.py  coverage.xml  pyproject.toml
.github/workflows/: main.yml
.pytest_cache/: .gitignore
.pytest_cache/v/cache/: lastfailed  nodeids
gendiff/: __init__.py  cli.py  consts.py  deff_builder.py  diff_builder.py  gendiff.py  generate_difference  parser.py
gendiff/formatters/: __init__.py  json_format.py  plain_format.py  select_format.py  stylish_format.py
gendiff/scripts/: __init__.py  gendiff.py  generate_differance.py
scripts/: diff.py
tests/: equal.py  gendiff_test.py  test1.py  test2.py
tests/fixtures/: file1.json  file1.yml  file2.json  file2.yml  file3.yml  file4.yml
