[tool.poetry]
name = "python-project-50"
version = "0.1.0"
description = ""
authors = ["Demid <lliker1337@gmail.com>"]
readme = "README.md"

packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.10.12"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.generate_differance:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
