[tool.poetry]
name = "python-project-50"
version = "0.1.0"
description = "Hexlet project 2"
authors = ["Demid <lliker1337@gmail.com>"]
readme = "README.md"

packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.10.12"
pyyaml = "^6.0.1"
flake8 = "^7.1.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pytest = "^8.2.0"
pytest-cov = "^5.0.0"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.generate_differance:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
